feat: add music/publish stages and E2E pipeline runner
Completes all stage handlers:
- musicStage: Selects background music based on mood/genre
- publishStage: Publishes to YouTube, TikTok, Twitter, Instagram

End-to-end runner (scripts/run-pipeline.ts):
- Run full pipeline from topic to video
- Supports --skip-publish, --skip-music flags
- Progress logging with stage metrics
- npm run pipeline:run command

Tests:
- music.test.ts: 12 tests
- publish.test.ts: 12 tests
- Total: 151 tests passing

Addresses #27

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
     "postinstall": "prisma generate",
-    "deploy:token": "npx ts-node scripts/deploy-token.ts"
+    "deploy:token": "npx ts-node scripts/deploy-token.ts",
+    "pipeline:run": "npx ts-node scripts/run-pipeline.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
